@@ -5,12 +5,14 @@ import com.jobscheduler.dto.SubmitJobRequest;
 import com.jobscheduler.engine.JobScheduler;
 import com.jobscheduler.factory.JobFactory;
 import com.jobscheduler.model.JobData;
-import com.jobscheduler.repository.JobRepository;
+//import com.jobscheduler.repository.JobRepository;
+import com.jobscheduler.repository.JobRepositoryInterface;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 /**
  * Service layer for job operations.
@@ -20,10 +22,13 @@ import java.util.stream.Collectors;
 public class JobService {
 
     @Autowired
-    private JobRepository jobRepository;
+    private JobRepositoryInterface jobRepository;
 
     @Autowired
     private JobScheduler jobScheduler;
+
+    @Autowired
+    private JobIdGenerator jobIdGenerator;
 
     /**
      * Submit a new job for execution.
@@ -35,8 +40,10 @@ public class JobService {
         // Create JobData from DTO
         JobData jobData = JobFactory.createJobData(request);
 
-        // Save to repository
-        int jobId = jobRepository.save(jobData);
+        // Save to repository and get assigned ID
+        int jobId = jobIdGenerator.generateJobId();
+        jobData.setJobId(jobId);
+        jobRepository.save(jobData);
 
         // Schedule for execution
         jobScheduler.scheduleJob(jobId);
@@ -51,11 +58,8 @@ public class JobService {
      * @return JobResponse DTO
      */
     public JobResponse getJob(int jobId) {
-        JobData jobData = jobRepository.findById(jobId);
-        if (jobData == null) {
-            return null;
-        }
-        return JobFactory.toJobResponse(jobData);
+        Optional<JobData> jobData = jobRepository.findByJobId(jobId);
+        return jobData.map(JobFactory::toJobResponse).orElse(null);
     }
 
     /**
@@ -64,11 +68,16 @@ public class JobService {
      * @return List of JobResponse DTOs
      */
     public List<JobResponse> getAllJobs() {
-        return jobRepository.findAll().values().stream()
+        return  jobRepository.findAll().stream()
                 .map(JobFactory::toJobResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    /**
+     * Cancel a running or queued job.
+     *
+     * @param jobId The job ID
+     */
     public void cancelJob(int jobId) {
         jobScheduler.cancelJob(jobId);
     }
